--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/img_logo"
             android:text="@string/desc_logo"
-            android:textSize="@dimen/size_3s"
+            android:textSize="@dimen/size_s3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
@@ -84,7 +84,7 @@
             android:layout_margin="@dimen/margin_s1"
             android:background="@drawable/shape_btn_login"
             android:text="@string/btn_login"
-            android:textSize="@dimen/size_5s"
+            android:textSize="@dimen/size_s5"
             android:textColor="@color/white"
             android:layout_width="@dimen/width_s70"
             android:layout_height="wrap_content"/>
@@ -93,7 +93,7 @@
             android:layout_margin="@dimen/margin_s1"
             android:background="@drawable/shape_btn_register"
             android:text="@string/btn_register"
-            android:textSize="@dimen/size_5s"
+            android:textSize="@dimen/size_s5"
             android:textColor="@color/yellow"
             android:layout_width="@dimen/width_s70"
             android:layout_height="wrap_content"/>
