--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/img_logo"
             android:text="@string/desc_logo"
-            android:textSize="@dimen/size_3s"
+            android:textSize="@dimen/size_s3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
@@ -104,7 +104,7 @@
             android:layout_margin="@dimen/margin_s2"
             android:background="@drawable/shape_btn_register"
             android:text="@string/btn_cancel"
-            android:textSize="@dimen/size_5s"
+            android:textSize="@dimen/size_s5"
             android:textColor="@color/yellow"
             android:layout_width="@dimen/width_s30"
             android:layout_height="wrap_content"/>
@@ -113,7 +113,7 @@
             android:layout_margin="@dimen/margin_s2"
             android:background="@drawable/shape_btn_login"
             android:text="@string/btn_register"
-            android:textSize="@dimen/size_5s"
+            android:textSize="@dimen/size_s5"
             android:textColor="@color/white"
             android:layout_width="@dimen/width_s30"
             android:layout_height="wrap_content"/>
