--- a/app/src/main/res/layout/item_footer.xml
+++ b/app/src/main/res/layout/item_footer.xml
@@ -7,13 +7,13 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/img_item_icon"
-        android:layout_width="@dimen/width_s8"
-        android:layout_height="@dimen/height_s8"/>
+        android:layout_width="@dimen/width_s7"
+        android:layout_height="@dimen/height_s7"/>
     <TextView
         android:id="@+id/txt_item_title"
         android:layout_marginTop="@dimen/margin_s1"
         android:gravity="center"
-        android:textSize="@dimen/size_4s"
+        android:textSize="@dimen/size_s4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
