--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,11 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black">#000000</color>
+    <color name="black_alpha">#58000000</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#00000000</color>
     <color name="yellow">#FAC81E</color>
-    <color name="grey">#FF888888</color>
+    <color name="grey">#adadad</color>
+
+    <color name="light_grey">#e8e8e8</color>
 </resources>
