--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="yellow">#FAC81E</color>
     <color name="grey">#adadad</color>
 
-    <color name="light_grey">#e8e8e8</color>
+    <color name="light_grey">#E8E8E8</color>
+    <color name="orange">#F9AB30</color>
+    <color name="green">#1acb74</color>
 </resources>
