--- a/app/src/main/res/layout/fragment_auction.xml
+++ b/app/src/main/res/layout/fragment_auction.xml
@@ -5,10 +5,15 @@
              android:layout_height="match_parent"
              tools:context=".business.main.fragment.AuctionFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
