--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_grey">#E8E8E8</color>
     <color name="orange">#F9AB30</color>
     <color name="green">#1acb74</color>
+    <color name="red">#ff0000</color>
 </resources>
